Updated to fix outdated dependencies

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/ShearSpireMedia/lorem#readme",
   "devDependencies": {
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
+    "webpack": "*",
+    "webpack-cli": "*"
   }
 }
