--- a/package.json
+++ b/package.json
@@ -4,23 +4,27 @@
   "description": "A handy program to generate nonsense greeking to use in your layouts.",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ShearSpireMedia/lorem.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start": "webpack-dev-server",
+    "e2e": "npx cypress open"
   },
   "keywords": [],
-  "author": "",
+  "author": "Steven Estrella of ShearSpire Media",
   "license": "ISC",
+  "dependencies": {
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.2"
+  },
   "bugs": {
     "url": "https://github.com/ShearSpireMedia/lorem/issues"
   },
   "homepage": "https://github.com/ShearSpireMedia/lorem#readme",
   "devDependencies": {
-    "webpack": "*",
-    "webpack-cli": "*"
+    "copy-webpack-plugin": "^11.0.0",
+    "cypress": "^10.7.0",
+    "exports-loader": "^4.0.0",
+    "imports-loader": "^4.0.1"
   }
 }
