--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /*.DS_Store
 /.user
 /build
+/dist
 
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
